--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
-
     <link
       rel="icon"
       type="image/png"
@@ -17,10 +15,7 @@
       href="https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Fraunces:wght@600;900&display=swap"
       rel="stylesheet"
     />
-
     <title>Sunnyside</title>
-
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <link rel="stylesheet" href="sass/style.css" />
   </head>
   <body>
@@ -31,7 +26,7 @@
         </div>
         <div class="nav-buttons">
           <button class="ham" type="button" onclick="toggleMenu()">
-            <img src="./images/icon-hamburger.svg" alt="" />
+            <img src="./images/icon-hamburger.svg" alt="hamburguer icon" />
           </button>
           <div class="site-nav" id="site-nav">
             <ul class="nav">
@@ -48,7 +43,7 @@
         <img
           src="images/icon-arrow-down.svg"
           alt="A arrow pointing down"
-          class="arrow"
+          class="icon arrow"
         />
       </div>
     </header>
@@ -78,7 +73,7 @@
           <img
             class="fruits"
             src="./images/desktop/image-stand-out.jpg"
-            alt="Image egg"
+            alt="Image stand out"
           />
         </div>
         <div class="rowText">
@@ -122,7 +117,7 @@
             <img
               class="img-testimonials"
               src="./images/image-emily.jpg"
-              alt="Image Emily"
+              alt="Emily, client testimonial"
             />
             <p class="p_testimonials">
               We put our trust in Sunnyside and they delivered, making sure our
@@ -138,7 +133,7 @@
             <img
               class="img-testimonials"
               src="./images/image-thomas.jpg"
-              alt="Image Thomas"
+              alt="Thomas, client testimonial"
             />
             <p class="p_testimonials">
               Sunnyside’s enthusiasm coupled with their keen interest in our
@@ -154,7 +149,7 @@
             <img
               class="img-testimonials"
               src="./images/image-jennie.jpg"
-              alt="Image Jennie"
+              alt="Jennie, client testimonial"
             />
             <p class="p_testimonials">
               Incredible end result! Our sales increased over 400% when we
@@ -174,28 +169,28 @@
             <img
               class="gallery"
               src="./images/desktop/image-gallery-milkbottles.jpg"
-              alt=""
+              alt="Image milk"
             />
           </div>
           <div class="image">
             <img
               class="gallery"
               src="./images/desktop/image-gallery-orange.jpg"
-              alt=""
+              alt="Image orange"
             />
           </div>
           <div class="image">
             <img
               class="gallery"
               src="./images/desktop/image-gallery-cone.jpg"
-              alt=""
+              alt="Image cone"
             />
           </div>
           <div class="image">
             <img
               class="gallery"
               src="./images/desktop/image-gallery-sugarcubes.jpg"
-              alt=""
+              alt="Image sugarcubes"
             />
           </div>
         </div>
@@ -210,16 +205,24 @@
           <li class="nav_footer">Projects</li>
         </ul>
         <div class="social_media">
-          <img class="social_img" src="./images/icon-facebook.svg" alt="" />
+          <img
+            class="social_img"
+            src="./images/icon-facebook.svg"
+            alt="icon-facebook"
+          />
           <img
             class="social_img"
             src="./images/icon-instagram.svg"
-            alt=""
+            alt="icon-instagram"
           /><img
             class="social_img"
             src="./images/icon-twitter.svg"
-            alt=""
-          /><img class="social_img" src="./images/icon-pinterest.svg" alt="" />
+            alt="icon-twitter"
+          /><img
+            class="social_img"
+            src="./images/icon-pinterest.svg"
+            alt="icon-pinterest"
+          />
         </div>
         <div class="attribution">
           Challenge by
